# GravyBox

./: .coderabbit.yaml  .gitattributes  .gitignore  AGENTS.md  headless
core/: GravyBox.Core.csproj
core/Interop/: GravyBoxKernel.cs  KernelNativeResolver.cs
godot/: GravyBox.Editor.csproj  GravyBox.sln  GravyBoxRuntime.cs  GravyBoxRuntime.cs.uid  main.tscn  project.godot
godot/Editor/: FlyCamera.cs  FlyCamera.cs.uid  InfiniteGrid.cs  InfiniteGrid.cs.uid
godot/Editor/Shaders/: infinite_grid.gdshader  infinite_grid.gdshader.uid
kernel/: Cargo.toml
kernel/src/: lib.rs
